# Python---algorytmy

./: .gitignore  ImageRecognitionDataset.py  blobRadiusAlg.py  cumulativeThreshDane.txt  findMarkerPointsTest.py  find_marker_points.cpp  hardwareCCL.py  hardwarePeakMax.py  helperFunctions.py  image_stats.py  main.py  output_csv.py  processing_results_2025-07-03_18-40-02.csv  threshold.py  uart.py  visualAlgorithm.py  vitis_filter.py
Cpp_point_processing/: .gitignore  CMakeLists.txt  EPnP.hpp  EPnPMain.cpp  Ransac.hpp  findMarkerPoints.py  find_marker_points.cpp  find_marker_points.hpp  main.cpp
Cpp_point_processing/cmake-modules/: OpenCVConfig.cmake
CumulativeTHresholdingAreaTests/: CumulativeThresholdAreaTests.xlsx  Cumulative_Thres_Multiplier_Offset_Tests  Cumulative_Thres_Multiplier_Offset_Tests.xlsx  cumulativeThreshDane.txt  test_Code.txt
CumulativeTHresholdingAreaTests/Marker_A/: Cumulative_Hist_Area_Thresholding.txt
CumulativeTHresholdingAreaTests/Marker_B/: Constant_Threshold_Tests.txt  Cumulative_Thres_Area_Low_Bound_counts.csv  Cumulative_Thres_Area_Low_Bound_raw.csv  Cumulative_Thres_Const_Area_finer.txt  Cumulative_Thres_Const_Area_finer_raw.txt  Cumulative_Thres_Constant_Area.txt  Histogram_Offset_Threshold.txt  Max_Val_Offset_Threshold.txt  Sigmoid_Adjist.txt  Thresholding_Tests.xlsx  scikit_Threshold_Tests.txt
Zdjecia/zdjecia_FOK2/Znacznik_A/5/: main.py
Zdjecia/zdjecia_FOK2/Znacznik_A/55/: main.py
